--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                         <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#l">Testimonios </a>
+                        <a class="nav-link" href="#">Testimonios </a>
                     </li>
                     
                     <li class="nav-item active">
-                        <a class="nav-link" href="https://wa.link/xpotke">Contacto</a>               
+                        <a class="nav-link" href="#">Contacto</a>               
                     </li>
                 </ul>
             </div>
@@ -71,7 +71,7 @@
                     <div class="boton card-body">
                         <h5 class="card-title text-light">AMARRE AMOROSO</h5>
                         <p class="card-text text-light">Hay días que deseas que nunca hubieran existido, donde un solo error lo cambió todo, querés despertar y luego te diste cuenta que no hay vuelta atrás, tu pareja se alejó y ya no es la misma persona que antes. Si te sentís identificado(a), este ritual es para ti, voy a crear nuevos lazos y a reconstruir todos el amor que antes había en ustedes. Como cuando estaban enemorados y todo era hermoso.</p>
-                        <a href="https://wa.link/xpotke" class="btn  btn-lg active btn-block"
+                        <a href="#" class="btn  btn-lg active btn-block"
                             role="button" aria-pressed="true" >Reserva tu cita <i class="icon-whatsapp"></i></a>                   
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                     <div class="boton card-body">
                         <h5 class="card-title text-light">AMARRE SEXUAL</h5>
                         <p class="card-text text-light">¿Las cosas en la cama ya no son como antes? Se apagó la llama con tu pareja o directamente tu vida sexual es escasa! Con mi ritual revigorizante  te recargo con esa poderosa energía que te trabaron y que sientes que te abandono. Te ayudo a que éste ya no sea un problema. y que tus deseos pueden ser realidad, volveras a vivir tu sexualidad en su más alta potencia.</p><br>
-                            <a href="https://wa.link/xpotke" class="btn  btn-lg active btn-block" role="button" aria-pressed="true" >Reserva tu cita <i class="icon-whatsapp"></i></a> 
+                            <a href="#" class="btn  btn-lg active btn-block" role="button" aria-pressed="true" >Reserva tu cita <i class="icon-whatsapp"></i></a> 
                     </div>
                 </div>
                 <div class="card">
@@ -88,7 +88,7 @@
                     <div class="boton card-body">
                         <h5 class="card-title text-light">ENDULZAMIENTO</h5>
                         <p class="card-text text-light">Alguna vez sentiste una atracción muy grande hacia otra persona, una energía y una conexión que nunca habías sentido? Sin embargo por cosas del destino no están juntos. Con un endulzamiento hago que 2 almas destinadas a compartir un hermoso momento se unan. Para que esto funcione se evalúa la compatibilidad entre ambos para hacer una unión armoniosa.</p>
-                            <a href="https://wa.link/xpotke" class="btn  btn-lg active btn-block"
+                            <a href="#" class="btn  btn-lg active btn-block"
                             role="button" aria-pressed="true" >Reserva tu cita <i class="icon-whatsapp"></i></a> 
                     </div>
                 </div>
@@ -107,7 +107,7 @@
                         <div class="boton card-body">
                             <h5 class="card-title text-light">LIMPIEZA DE AURA</h5>
                             <p class="card-text text-light">¿Sientes que todos te sale mal? cada vez que quierés salir adelante algo te frena y no pudes avanzar? no entiendés como te pasan esas cosas malas y el porque de esa mala suerte en todo? Te cuento que eso tiene solución. Así como cuando nos ensuciamos luego nos bañamos para retirar esas suciedad , cuando nuestro campo áurico está sucio por malas energías o brujería  nos tenemos que bañar y limpiar el aura.  Ritual energético que te dejará como una nueva persona para que tengas éxito en todo lo que te propongas </p>
-                                <a href="https://wa.link/xpotke" class="btn  btn-lg active btn-block"
+                                <a href="#" class="btn  btn-lg active btn-block"
                                 role="button" aria-pressed="true" >Reserva tu cita <i class="icon-whatsapp"></i></a> 
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                         <div class="boton card-body">
                             <h5 class="card-title text-light">RITUAL ECONOMICO</h5>
                             <p class="card-text text-light">Estas pasando por problemas económicos te cuesta encontrar trabajo o estas estancado/a en el que tienes, no eres feliz y esto te llena de preocupaciones?. En esta parte vamos a armonizar el flujo del dinero, ya que este es una energía y como tal también necesita que se recargue para que sea abundante. Te regreso la energía para que puedas conseguir ese trabajo, o puedas limar asperezas en tu trabajo, lograr ascensos y mucho más que regrese la prosperidad y economia en tu vida.</p><br>
-                                <a href="https://wa.link/xpotke" class="btn  btn-lg active btn-block"
+                                <a href="#" class="btn  btn-lg active btn-block"
                                 role="button" aria-pressed="true" >Reserva tu cita <i class="icon-whatsapp"></i></a> 
                         </div>
                     </div>
@@ -231,7 +231,7 @@
    
      <!-- texto final -->
     <div class="footer-copyright text-center py-3 text-light">© 2020 Copyright:
-      <a href="#">amarreswalter.com</a>
+      <a href="#">PactosyAmarres</a>
     </div>
     <!-- Copyright -->
   </footer>
