--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <!-- /.col-lg-8 -->
             <div class="boton cambio col-lg-5 ">
                 <h1 class="font-weight-light  text-light">PactosyAmarre</h1>
-                <p class=" text-light">Maestro del amor, experto en curar brujeria mas de 30 años de experiencia. Realizo todo tipo de trabajos. Te ofrezco mi conocimiento para cambiar tu vida. Trabajos nacionales o internacionales, a través de la invocación de espíritus realizo rituales con los mejores elementos para que tengas una relación estable y permanente, Quedas protegido(a) de hechizos y conjuros. Manejo toda clase de magia roja, negra y blanca .</p>
+                <p class=" text-light">Chaman, experto en curar brujeria realizo todo tipo de trabajos nacionales o internacionales, invocación de espíritus realizo rituales con los mejores elementos, saco hechizos y conjuros. clarividente te digo tu futuro con la cartomancía, trabajos con magia roja, negra y blanca .</p>
                 <a class="btn  font-weight-bol text-light"  href="tel:+541165413771">Llamame tengo tu solucion <i class="fas fa-phone white-text mr-4"></i></a>    
                     
             </div>
