--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="titulos mt-5 pt5">
             <h2>Mis Ayudas</h2>
         </div>
-        <!--tarjetas productos -->
+        <!--tarjetas productos nuevas -->
         <section class="container ">
             <div class="card-deck">
                 <div class="card">
