--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="stile/estilos.css">
     <link rel="stylesheet" href="stile/fontello.css">
     <script src="https://kit.fontawesome.com/cbe4507d5f.js" crossorigin="anonymous"></script>
-    <!--google Analytics codigo de pagina  -->
+    <!--google Analytics codigo de pagina pendiente  -->
     
 </head>
 <body>
