--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Testimonios </a>
+                        <a class="nav-link" href="#">Testimonios</a>
                     </li>
                     
                     <li class="nav-item active">
@@ -48,7 +48,7 @@
         <!-- /.col-lg-8 -->
         <div class="boton inicio col-lg-5">
           <h2 class="font-weight-bol text-light">PactosyAmarres</h2><br>
-          <p class="text-light">Hoy mismo puedes ser feliz, no importa que tan difícil te parezca, 
+          <p class="text-light">Hoy mismo puedes ser feliz., No importa que tan difícil te parezca, 
             con mi ayuda estarás siempre acompañado en este camino de regreso a la felicidad que tanto has anhelado, Quito esas trabas que te impiden ser feliz en el amor o exitoso(a) saco brujería y regresó ese ser amado.  Llamame ! 
              </p>
           <a class="btn  font-weight-bol "  href="tel:+1128424772">Estoy para ayudarte <i class=" fas fa-phone white-text mr-4"></i></a> 
