--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Heading Row -->
     <div class="ticuara row align-items-center my-5">
         <div class="col-lg-7">
-          <img class="img-fluid rounded mb-4 mb-lg-0" src="imagenes/Chaman1.png" alt="Informacion">
+          <img  loading="lazy" class="img-fluid rounded mb-4 mb-lg-0" src="imagenes/Chaman1.png" alt="Informacion">
         </div>
         <!-- /.col-lg-8 -->
         <div class="boton inicio col-lg-5">
@@ -67,7 +67,7 @@
         <section class="container ">
             <div class="card-deck">
                 <div class="card">
-                    <img src="imagenes/imgen1.png" class="card-img-top" alt="limpieza facial">
+                    <img  loading="lazy" src="imagenes/imgen1.png" class="card-img-top" alt="limpieza facial">
                     <div class="boton card-body">
                         <h5 class="card-title text-light">Cortes de Daños</h5>
                         <p class="card-text text-light">¿Sientes que eres víctima de un trabajo de brujería o magia negra? ¿Escucha ruidos, oye voces? ¿Todo te sale mal? Alejo tu enemigo. Sal de esa duda y descubre la verdad, no dejes que fuerzas oscuras minen sobre tu existencia. Puedo cortar con todo tipo de daños. Especialista en detectar y destruir todo tipo de maleficios. </p><br>
@@ -77,7 +77,7 @@
                 </div>
                 
                 <div class="card">
-                    <img src="imagenes/foto2.png" class="card-img-top" alt="limpieza facial">
+                    <img  loading="lazy" src="imagenes/foto2.png" class="card-img-top" alt="limpieza facial">
                     <div class="boton card-body">
                         <h5 class="card-title text-light">Unión de parejas</h5>
                         <p class="card-text text-light">Si estás pasando por una situación difícil con tu pareja, cada vez hay mas peleas, celos, desconfianza, hostilidad o sientes que poco a poco tu pareja se está alejando, este es el trabajo que necesitas. La unión de pareja busca reforzar vínculos mejorar la convivencia y dar lugar a que el amor reviva más fuerte que nunca.</p><br>
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="imagenes/Dominio.jfif" class="card-img-top" alt="limpieza facial">
+                    <img loading="lazy" src="imagenes/Dominio.jfif" class="card-img-top" alt="limpieza facial">
                     <div class="boton card-body">
                         <h5 class="card-title text-light">Dominios de pareja</h5>
                         <p class="card-text text-light">Los Efectivos Dominios son procesos debidamente analizados con una consulta previa, para así determinar qué tipo de trabajo hay que realizar y tener una seguridad para que funcione con plena certeza Exelentes trabajos vea resultados en dias. </p><br><br><br>
