--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="stile/fontello.css">
     <script src="https://kit.fontawesome.com/cbe4507d5f.js" crossorigin="anonymous"></script>
     <!--google Analytics codigo de pagina pendiente  -->
+    <meta name="google-site-verification" content="3-ZigqkPR94npjMNvWGpBhSMyZBS82otpqFAwf0hHP4" />
     
 </head>
 <body>
